Page MenuHome GnuPG

pinentry qt 4 password corruption
Closed, ResolvedPublic

Description

getpin in qt4 does no longer work anymore since the change from
a4694dcda0fe27852be20db3017f9313adf361a3

Event Timeline

dmllr added a project: pinentry.
dmllr added a subscriber: dmllr.

ah, it seems there is a slightly different coding style. adjusted.

aheinecke added a subscriber: werner.
aheinecke added a subscriber: aheinecke.

Uh that's an embarassing error.

Thanks for your analysis and fix. I haven't seen problems with this in my tests
but the UTF8 Byte array is indeed temporary and the pin pointer is invalid after
it's destruction.

I've commited the your fix (with an ammended commit message so it confirms to
the msg style used in pinentry) with f143d21

Werner I've assigned it to you as this needs a release :/ Sorry.

Werner, I know that nothing much in pinentry has changed since 0.9.6 but this
bug is pretty bad for pinentry-qt. It would be good to have a new release.

werner removed a project: Restricted Project.

0.9.7 released.